--- a/GuessingGame/app/src/main/res/layout/content_main.xml
+++ b/GuessingGame/app/src/main/res/layout/content_main.xml
@@ -47,13 +47,14 @@
 
         <TextView
             android:id="@+id/lblOutput"
-            android:layout_width="wrap_content"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_alignParentStart="true"
             android:layout_alignParentTop="true"
-            android:layout_marginStart="91dp"
+            android:layout_marginStart="0dp"
             android:layout_marginTop="264dp"
             android:text="Enter a number, then click Guess!"
+            android:textAlignment="center"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent" />
 
@@ -67,7 +68,9 @@
             android:layout_marginTop="103dp"
             android:ems="10"
             android:inputType="number"
+            android:textAlignment="center"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="parent" />
+            app:layout_constraintStart_toStartOf="parent"
+            tools:ignore="SpeakableTextPresentCheck" />
     </RelativeLayout>
 </android.support.constraint.ConstraintLayout>
